src/test/ui/issues/issue-19991.stderr
error[E0317]: if may be missing an else clause
  --> $DIR/issue-19991.rs:5:5
   |
LL | /     if let Some(homura) = Some("madoka") { //~  ERROR missing an else clause
LL | |                                            //~| expected type `()`
LL | |                                            //~| found type `{integer}`
LL | |                                            //~| expected (), found integer
LL | |         765
LL | |     };
   | |_____^ expected (), found integer
   |
   = note: expected type `()`
              found type `{integer}`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0317`.
